--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <main>
     <section>
   <h1>SHARES - PRICES & STOCK MARKETS</h1>
-  <div class="h2side">
+  <div class="h1side">
     <button><i class="material-icons">search</i></button>
   <input type="search" id="site-search" name="q"
   aria-label="Search through site content" placeholder="Enter stock name or EPIC">      
@@ -118,72 +118,72 @@
     <div id="movers-risers" class="divtopflops">
       <p class="spacer-top-none spacer-bottom-half"><strong>FTSE 100 risers</strong></a></p>
       <table class="spacer-top-none">
-      <tbody><tr>
-      <td class="name"><a href="./shares.html" title="View factsheet for Rolls Royce Holdings Plc" class="link-headline">Rolls Royce Holdings Plc</a></td>
-      <td class="align-right">297.70p</td>
-      <td class="change align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-      <td class="align-right positive">+18.32%</td>
-      </tr>
-      <tr class="table-alt">
-      <td class="name"><a href="./shares.html" title="View factsheet for Melrose Industries plc" class="link-headline">Melrose Industries plc</a></td>
-      <td class="align-right">88.72p</td>
-      <td class="change align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-      <td class="align-right positive">+17.88%</td>
-      </tr>
-      <tr>
-      <td class="name"><a href="./shares.html" title="View factsheet for Carnival plc" class="link-headline">Carnival plc</a></td>
-      <td class="align-right">721.40p</td>
-      <td class="change align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-      <td class="align-right positive">+17.34%</td>
-      </tr>
-      <tr class="table-alt">
-      <td class="name"><a href="./shares.html" title="View factsheet for Legal &amp; General Group plc" class="link-headline">Legal &amp; General Group plc</a></td>
-      <td class="align-right">186.30p</td>
-      <td class="change align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-      <td class="align-right positive">+16.66%</td>
-      </tr>
-      <tr>
-      <td class="name"><a href="./shares.html" title="View factsheet for Barratt Developments plc" class="link-headline">Barratt Developments plc</a></td>
-      <td class="align-right">447.40p</td>
-      <td class="change align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-      <td class="align-right positive">+16.42%</td>
-      </tr>
-      </tbody></table>
+        <tbody><tr>
+          <td class="name"><a href="./shares.html?share=Rolls Royce Holdings Plc" title="View factsheet for Rolls Royce Holdings Plc" class="link-headline">Rolls Royce Holdings Plc</a></td>
+          <td class="align-right">297.70p</td>
+          <td class="change align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
+          <td class="align-right positive">+18.32%</td>
+          </tr>
+          <tr class="table-alt">
+          <td class="name"><a href="./shares.html?share=Melrose Industries plc" title="View factsheet for Melrose Industries plc" class="link-headline">Melrose Industries plc</a></td>
+          <td class="align-right">88.72p</td>
+          <td class="change align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
+          <td class="align-right positive">+17.88%</td>
+          </tr>
+          <tr>
+          <td class="name"><a href="./shares.html?share=Carnival plc" title="View factsheet for Carnival plc" class="link-headline">Carnival plc</a></td>
+          <td class="align-right">721.40p</td>
+          <td class="change align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
+          <td class="align-right positive">+17.34%</td>
+          </tr>
+          <tr class="table-alt">
+          <td class="name"><a href="./shares.html?share=Legal &amp; General Group plc" title="View factsheet for Legal &amp; General Group plc" class="link-headline">Legal &amp; General Group plc</a></td>
+          <td class="align-right">186.30p</td>
+          <td class="change align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
+          <td class="align-right positive">+16.66%</td>
+          </tr>
+          <tr>
+          <td class="name"><a href="./shares.html?share=Barratt Developments plc" title="View factsheet for Barratt Developments plc" class="link-headline">Barratt Developments plc</a></td>
+          <td class="align-right">447.40p</td>
+          <td class="change align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
+          <td class="align-right positive">+16.42%</td>
+          </tr>
+          </tbody></table>
       </div>
-    <div id="movers-fallers" class="divtopflops">
+    <div id="movers-fallers" class="divtopflops2">
       <p class="spacer-top-none spacer-bottom-half"><strong>FTSE 100 fallers</strong></a></p>
       <table class="spacer-top-none spacer-bottom">
-      <tbody><tr>
-      <td class="name"><a href="./shares.html" title="View factsheet for Sainsbury (J) plc" class="link-headline">Sainsbury (J) plc</a></td>
-      <td class="align-right">206.10p</td>
-      <td class="change align-center"><i class="material-icons" style="color:red">arrow_downward</i></td>
-      <td class="align-right negative">-3.42%</td>
-      </tr>
-      <tr class="table-alt">
-      <td class="name"><a href="./shares.html" title="View factsheet for United Utilities Group Plc" class="link-headline">United Utilities Group Plc</a></td>
-      <td class="align-right">826.20p</td>
-      <td class="change align-center"><i class="material-icons" style="color:red">arrow_downward</i></td>
-      <td class="align-right negative">-2.78%</td>
-      </tr>
-      <tr>
-      <td class="name"><a href="./shares.html" title="View factsheet for Halma plc" class="link-headline">Halma plc</a></td>
-      <td class="align-right">1,848.50p</td>
-      <td class="change align-center"><i class="material-icons" style="color:red">arrow_downward</i></td>
-      <td class="align-right negative">2.17%</td>
-      </tr>
-      <tr class="table-alt">
-      <td class="name"><a href="./shares.html" title="View factsheet for London Stock Exchange Group plc" class="link-headline">London Stock Exchange Group plc</a></td>
-      <td class="align-right">7,064.00p</td>
-      <td class="change align-center"><i class="material-icons" style="color:red">arrow_downward</i></td>
-      <td class="align-right negative">-1.89%</td>
-      </tr>
-      <tr>
-      <td class="name"><a href="./shares.html" title="View factsheet for Pennon Group" class="link-headline">Pennon Group</a></td>
-      <td class="align-right">1,025.50p</td>
-      <td class="change align-center"><i class="material-icons" style="color:red">arrow_downward</i></td>
-      <td class="align-right negative">-1.87%</td>
-      </tr>
-      </tbody></table>
+        <tbody><tr>
+          <td class="name"><a href="./shares.html?share=Sainsbury (J) plc" title="View factsheet for Sainsbury (J) plc" class="link-headline">Sainsbury (J) plc</a></td>
+          <td class="align-right">206.10p</td>
+          <td class="change align-center"><i class="material-icons" style="color:red">arrow_downward</i></td>
+          <td class="align-right negative">-3.42%</td>
+          </tr>
+          <tr class="table-alt">
+          <td class="name"><a href="./shares.html?share=United Utilities Group Plc" title="View factsheet for United Utilities Group Plc" class="link-headline">United Utilities Group Plc</a></td>
+          <td class="align-right">826.20p</td>
+          <td class="change align-center"><i class="material-icons" style="color:red">arrow_downward</i></td>
+          <td class="align-right negative">-2.78%</td>
+          </tr>
+          <tr>
+          <td class="name"><a href="./shares.html?share=Halma plc" title="View factsheet for Halma plc" class="link-headline">Halma plc</a></td>
+          <td class="align-right">1,848.50p</td>
+          <td class="change align-center"><i class="material-icons" style="color:red">arrow_downward</i></td>
+          <td class="align-right negative">2.17%</td>
+          </tr>
+          <tr class="table-alt">
+          <td class="name"><a href="./shares.html?share=London Stock Exchange Group plc" title="View factsheet for London Stock Exchange Group plc" class="link-headline">London Stock Exchange Group plc</a></td>
+          <td class="align-right">7,064.00p</td>
+          <td class="change align-center"><i class="material-icons" style="color:red">arrow_downward</i></td>
+          <td class="align-right negative">-1.89%</td>
+          </tr>
+          <tr>
+          <td class="name"><a href="./shares.html?share=Pennon Group" title="View factsheet for Pennon Group" class="link-headline">Pennon Group</a></td>
+          <td class="align-right">1,025.50p</td>
+          <td class="change align-center"><i class="material-icons" style="color:red">arrow_downward</i></td>
+          <td class="align-right negative">-1.87%</td>
+          </tr>
+          </tbody></table>
       </div>
     </section>
   </section>
