--- a/shares.html
+++ b/shares.html
@@ -58,15 +58,24 @@
 
         <section class="recuadroBis">
           <div class="recuadrocabecera">
-            <p class="separador">Sell:57.92p</p>
-            <p class="separador2">|</p>
-            <p class="separador">Buy:57.94p</p>
-            <p class="separador2">|</p>
-            <p class="separador"><i class="material-icons" style="color:green; vertical-align:middle">arrow_upward</i> 0.59p (1.03%)</p>
+            <p class="separador3">Open: 57.44p</p>
+            <p class="separador3">Trade high: 58.15p</p>
+            <p class="separador3">Year high: 69.99p</p>
+            <p class="separador3">Market capitalisation: £40.65 bn</p>
           </div>
-            <div class="recuadrocabecera2">
-              <p class="separador">FTSE 100: <i class="material-icons" style="color:green; vertical-align: bottom;">arrow_upward</i>1.09%</p>
+          <div class="recuadrocabecera">
+            <p class="separador3">Previous close: 57.44p</p>
+            <p class="separador3">Trade low: 56.48p</p>
+            <p class="separador3">Year low: 48.16p</p>
+            <p class="separador3">P/E ratio: 10.44</p>
             </div>
+            <div class="recuadrocabecera">
+              <p class="separador3">Previous: 0.71p (1.25%)</p>
+              <p class="separador3">Volume: 170,125,290</p>
+              <p class="separador3">Dividend yield: 5.53%</p>
+              <p class="separador3">EMS: 30,000</p>
+          </div>
+
       </section>
       <section>
         <div class="divShares" id="container"></div>
