--- a/index.html
+++ b/index.html
@@ -49,49 +49,49 @@
   <section>
     <table>
       <tbody><tr>
-      <td class="align-left"><a href="#" onclick="myJsFunc('ftse100');">FTSE 100</a></td>
+      <td class="align-left"><a href="#" onclick="myJsFunc('ftse100.json');">FTSE 100</a></td>
       <td class="align-right">5,583.50</td>
       <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
       <td class="align-right positive">+168.00</td>
       <td class="align-right positive">+3.10%</td>
       </tr>
       <tr class="table-alt">
-      <td class="align-left"><a href="#" onclick="myJsFunc('ftse250');">FTSE 250</a></td>
+      <td class="align-left"><a href="#" onclick="myJsFunc('ftse250.json');">FTSE 250</a></td>
       <td class="align-right">14,807.14</td>
       <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
       <td class="align-right positive">+707.93</td>
       <td class="align-right positive">+5.02%</td>
       </tr>
       <tr>
-      <td class="align-left">FTSE 350</td>
+      <td class="align-left"><a href="#" onclick="myJsFunc('ftse350.json');">FTSE 350</a></td>
       <td class="align-right">3,099.04</td>
       <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
       <td class="align-right positive">+102.07</td>
       <td class="align-right positive">+3.41%</td>
       </tr>
       <tr class="table-alt">
-      <td class="align-left">FTSE All Share</td>
+      <td class="align-left"><a href="#" onclick="myJsFunc('ftseAllShare.json');">FTSE All Share</a></td>
       <td class="align-right">3,058.79</td>
       <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
       <td class="align-right positive">+100.39</td>
       <td class="align-right positive">+3.39%</td>
       </tr>
       <tr class="selected">
-      <td class="align-left">FTSE techMARK 100</td>
+      <td class="align-left"><a href="#" onclick="myJsFunc('ftseTechMARK100.json');">FTSE techMARK 100</a></td>
       <td class="align-right">4,517.20</td>
       <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
       <td class="align-right positive">+157.89</td>
       <td class="align-right positive">+3.62%</td>
       </tr>
       <tr class="table-alt">
-      <td class="align-left">FTSE Small Cap</td>
+      <td class="align-left"><a href="#" onclick="myJsFunc('ftseSmallCap.json');">FTSE Small Cap</a></td>
       <td class="align-right">4,282.64</td>
       <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
       <td class="align-right positive">+136.08</td>
       <td class="align-right positive">+3.28%</td>
       </tr>
       <tr class="">
-      <td class="align-left">FTSE AIM 100</td>
+      <td class="align-left"><a href="#" onclick="myJsFunc('ftseAim100.json');">FTSE AIM 100</a></td>
       <td class="align-right">3,460.62</td>
       <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
       <td class="align-right positive">+112.80</td>
