error punto commit

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
 
   <script>
-  Highcharts.getJSON('/jsonfiles/ftse100.json', function (data) {
+  Highcharts.getJSON('./jsonfiles/ftse100.json', function (data) {
       // Create the chart
       Highcharts.stockChart('container', {   
 
