--- a/index.html
+++ b/index.html
@@ -49,53 +49,53 @@
   <section>
     <table>
       <tbody><tr>
-      <td class="align-left"><a href="#" onclick="myJsFunc('ftse100.json');">FTSE 100</a></td>
-      <td class="align-right">5,583.50</td>
-      <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-      <td class="align-right positive">+168.00</td>
-      <td class="align-right positive">+3.10%</td>
+      <td class="tdbis"><a href="#" onclick="myJsFunc('ftse100.json');">FTSE 100</a></td>
+      <td class="tdbis">5,583.50</td>
+      <td class="tdbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
+      <td class="tdbis">+168.00</td>
+      <td class="tdbis">+3.10%</td>
       </tr>
-      <tr class="table-alt">
-      <td class="align-left"><a href="#" onclick="myJsFunc('ftse250.json');">FTSE 250</a></td>
-      <td class="align-right">14,807.14</td>
-      <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-      <td class="align-right positive">+707.93</td>
-      <td class="align-right positive">+5.02%</td>
+      <tr class="tdsecondbis">
+      <td class="tdsecondbis"><a href="#" onclick="myJsFunc('ftse250.json');">FTSE 250</a></td>
+      <td class="tdsecondbis">14,807.14</td>
+      <td class="tdsecondbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
+      <td class="tdsecondbis">+707.93</td>
+      <td class="tdsecondbis">+5.02%</td>
       </tr>
       <tr>
-      <td class="align-left"><a href="#" onclick="myJsFunc('ftse350.json');">FTSE 350</a></td>
-      <td class="align-right">3,099.04</td>
-      <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-      <td class="align-right positive">+102.07</td>
-      <td class="align-right positive">+3.41%</td>
+      <td class="tdbis"><a href="#" onclick="myJsFunc('ftse350.json');">FTSE 350</a></td>
+      <td class="tdbis">3,099.04</td>
+      <td class="tdbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
+      <td class="tdbis">+102.07</td>
+      <td class="tdbis">+3.41%</td>
       </tr>
-      <tr class="table-alt">
-      <td class="align-left"><a href="#" onclick="myJsFunc('ftseAllShare.json');">FTSE All Share</a></td>
-      <td class="align-right">3,058.79</td>
-      <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-      <td class="align-right positive">+100.39</td>
-      <td class="align-right positive">+3.39%</td>
+      <tr class="tdsecondbis">
+      <td class="tdsecondbis"><a href="#" onclick="myJsFunc('ftseAllShare.json');">FTSE All Share</a></td>
+      <td class="tdsecondbis">3,058.79</td>
+      <td class="tdsecondbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
+      <td class="tdsecondbis">+100.39</td>
+      <td class="tdsecondbis">+3.39%</td>
       </tr>
-      <tr class="selected">
-      <td class="align-left"><a href="#" onclick="myJsFunc('ftseTechMARK100.json');">FTSE techMARK 100</a></td>
-      <td class="align-right">4,517.20</td>
-      <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-      <td class="align-right positive">+157.89</td>
-      <td class="align-right positive">+3.62%</td>
+      <tr class="tdbis">
+      <td class="tdbis"><a href="#" onclick="myJsFunc('ftseTechMARK100.json');">FTSE techMARK 100</a></td>
+      <td class="tdbis">4,517.20</td>
+      <td class="tdbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
+      <td class="tdbis">+157.89</td>
+      <td class="tdbis">+3.62%</td>
       </tr>
-      <tr class="table-alt">
-      <td class="align-left"><a href="#" onclick="myJsFunc('ftseSmallCap.json');">FTSE Small Cap</a></td>
-      <td class="align-right">4,282.64</td>
-      <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-      <td class="align-right positive">+136.08</td>
-      <td class="align-right positive">+3.28%</td>
+      <tr class="tdsecondbis">
+      <td class="tdsecondbis"><a href="#" onclick="myJsFunc('ftseSmallCap.json');">FTSE Small Cap</a></td>
+      <td class="tdsecondbis">4,282.64</td>
+      <td class="tdsecondbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
+      <td class="tdsecondbis">+136.08</td>
+      <td class="tdsecondbis">+3.28%</td>
       </tr>
       <tr class="">
-      <td class="align-left"><a href="#" onclick="myJsFunc('ftseAim100.json');">FTSE AIM 100</a></td>
-      <td class="align-right">3,460.62</td>
-      <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-      <td class="align-right positive">+112.80</td>
-      <td class="align-right positive">+3.37%</td>
+      <td class="tdbis"><a href="#" onclick="myJsFunc('ftseAim100.json');">FTSE AIM 100</a></td>
+      <td class="tdbis">3,460.62</td>
+      <td class="tdbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
+      <td class="tdbis">+112.80</td>
+      <td class="tdbis">+3.37%</td>
       </tr>
       </tbody></table>
       <div id="container"></div>
@@ -119,34 +119,34 @@
       <p class="spacer-top-none spacer-bottom-half"><strong>FTSE 100 risers</strong></a></p>
       <table class="spacer-top-none">
         <tbody><tr>
-          <td class="name"><a href="./shares.html?share=Rolls Royce Holdings Plc" title="View factsheet for Rolls Royce Holdings Plc" class="link-headline">Rolls Royce Holdings Plc</a></td>
-          <td class="align-right">297.70p</td>
-          <td class="change align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-          <td class="align-right positive">+18.32%</td>
+          <td class="tdbis"><a href="./shares.html?share=Rolls Royce Holdings Plc" title="View factsheet for Rolls Royce Holdings Plc" class="link-headline">Rolls Royce Holdings Plc</a></td>
+          <td class="tdbis">297.70p</td>
+          <td class="tdbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
+          <td class="tdbis">+18.32%</td>
           </tr>
-          <tr class="table-alt">
-          <td class="name"><a href="./shares.html?share=Melrose Industries plc" title="View factsheet for Melrose Industries plc" class="link-headline">Melrose Industries plc</a></td>
-          <td class="align-right">88.72p</td>
-          <td class="change align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-          <td class="align-right positive">+17.88%</td>
-          </tr>
-          <tr>
-          <td class="name"><a href="./shares.html?share=Carnival plc" title="View factsheet for Carnival plc" class="link-headline">Carnival plc</a></td>
-          <td class="align-right">721.40p</td>
-          <td class="change align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-          <td class="align-right positive">+17.34%</td>
-          </tr>
-          <tr class="table-alt">
-          <td class="name"><a href="./shares.html?share=Legal &amp; General Group plc" title="View factsheet for Legal &amp; General Group plc" class="link-headline">Legal &amp; General Group plc</a></td>
-          <td class="align-right">186.30p</td>
-          <td class="change align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-          <td class="align-right positive">+16.66%</td>
+          <tr class="tdsecondbis">
+          <td class="tdsecondbis"><a href="./shares.html?share=Melrose Industries plc" title="View factsheet for Melrose Industries plc" class="link-headline">Melrose Industries plc</a></td>
+          <td class="tdsecondbis">88.72p</td>
+          <td class="tdsecondbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
+          <td class="tdsecondbis">+17.88%</td>
           </tr>
           <tr>
-          <td class="name"><a href="./shares.html?share=Barratt Developments plc" title="View factsheet for Barratt Developments plc" class="link-headline">Barratt Developments plc</a></td>
-          <td class="align-right">447.40p</td>
-          <td class="change align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-          <td class="align-right positive">+16.42%</td>
+          <td class="tdbis"><a href="./shares.html?share=Carnival plc" title="View factsheet for Carnival plc" class="link-headline">Carnival plc</a></td>
+          <td class="tdbis">721.40p</td>
+          <td class="tdbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
+          <td class="tdbis">+17.34%</td>
+          </tr>
+          <tr class="tdsecondbis">
+          <td class="tdsecondbis"><a href="./shares.html?share=Legal &amp; General Group plc" title="View factsheet for Legal &amp; General Group plc" class="link-headline">Legal &amp; General Group plc</a></td>
+          <td class="tdsecondbis">186.30p</td>
+          <td class="tdsecondbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
+          <td class="tdsecondbis">+16.66%</td>
+          </tr>
+          <tr>
+          <td class="tdbis"><a href="./shares.html?share=Barratt Developments plc" title="View factsheet for Barratt Developments plc" class="link-headline">Barratt Developments plc</a></td>
+          <td class="tdbis">447.40p</td>
+          <td class="tdbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
+          <td class="tdbis">+16.42%</td>
           </tr>
           </tbody></table>
       </div>
@@ -154,34 +154,34 @@
       <p class="spacer-top-none spacer-bottom-half"><strong>FTSE 100 fallers</strong></a></p>
       <table class="spacer-top-none spacer-bottom">
         <tbody><tr>
-          <td class="name"><a href="./shares.html?share=Sainsbury (J) plc" title="View factsheet for Sainsbury (J) plc" class="link-headline">Sainsbury (J) plc</a></td>
-          <td class="align-right">206.10p</td>
-          <td class="change align-center"><i class="material-icons" style="color:red">arrow_downward</i></td>
-          <td class="align-right negative">-3.42%</td>
+          <td class="tdbis"><a href="./shares.html?share=Sainsbury (J) plc" title="View factsheet for Sainsbury (J) plc" class="link-headline">Sainsbury (J) plc</a></td>
+          <td class="tdbis">206.10p</td>
+          <td class="tdbis"><i class="material-icons" style="color:red">arrow_downward</i></td>
+          <td class="tdbis">-3.42%</td>
           </tr>
-          <tr class="table-alt">
-          <td class="name"><a href="./shares.html?share=United Utilities Group Plc" title="View factsheet for United Utilities Group Plc" class="link-headline">United Utilities Group Plc</a></td>
-          <td class="align-right">826.20p</td>
-          <td class="change align-center"><i class="material-icons" style="color:red">arrow_downward</i></td>
-          <td class="align-right negative">-2.78%</td>
-          </tr>
-          <tr>
-          <td class="name"><a href="./shares.html?share=Halma plc" title="View factsheet for Halma plc" class="link-headline">Halma plc</a></td>
-          <td class="align-right">1,848.50p</td>
-          <td class="change align-center"><i class="material-icons" style="color:red">arrow_downward</i></td>
-          <td class="align-right negative">2.17%</td>
-          </tr>
-          <tr class="table-alt">
-          <td class="name"><a href="./shares.html?share=London Stock Exchange Group plc" title="View factsheet for London Stock Exchange Group plc" class="link-headline">London Stock Exchange Group plc</a></td>
-          <td class="align-right">7,064.00p</td>
-          <td class="change align-center"><i class="material-icons" style="color:red">arrow_downward</i></td>
-          <td class="align-right negative">-1.89%</td>
+          <tr class="tdsecondbis">
+          <td class="tdsecondbis"><a href="./shares.html?share=United Utilities Group Plc" title="View factsheet for United Utilities Group Plc" class="link-headline">United Utilities Group Plc</a></td>
+          <td class="tdsecondbis">826.20p</td>
+          <td class="tdsecondbis"><i class="material-icons" style="color:red">arrow_downward</i></td>
+          <td class="tdsecondbis">-2.78%</td>
           </tr>
           <tr>
-          <td class="name"><a href="./shares.html?share=Pennon Group" title="View factsheet for Pennon Group" class="link-headline">Pennon Group</a></td>
-          <td class="align-right">1,025.50p</td>
-          <td class="change align-center"><i class="material-icons" style="color:red">arrow_downward</i></td>
-          <td class="align-right negative">-1.87%</td>
+          <td class="tdbis"><a href="./shares.html?share=Halma plc" title="View factsheet for Halma plc" class="link-headline">Halma plc</a></td>
+          <td class="tdbis">1,848.50p</td>
+          <td class="tdbis"><i class="material-icons" style="color:red">arrow_downward</i></td>
+          <td class="tdbis">2.17%</td>
+          </tr>
+          <tr class="tdsecondbis">
+          <td class="tdsecondbis"><a href="./shares.html?share=London Stock Exchange Group plc" title="View factsheet for London Stock Exchange Group plc" class="link-headline">London Stock Exchange Group plc</a></td>
+          <td class="tdsecondbis">7,064.00p</td>
+          <td class="tdsecondbis"><i class="material-icons" style="color:red">arrow_downward</i></td>
+          <td class="tdsecondbis">-1.89%</td>
+          </tr>
+          <tr>
+          <td class="tdbis"><a href="./shares.html?share=Pennon Group" title="View factsheet for Pennon Group" class="link-headline">Pennon Group</a></td>
+          <td class="tdbis">1,025.50p</td>
+          <td class="tdbis"><i class="material-icons" style="color:red">arrow_downward</i></td>
+          <td class="tdbis">-1.87%</td>
           </tr>
           </tbody></table>
       </div>
