--- a/shares.html
+++ b/shares.html
@@ -81,53 +81,53 @@
         <div class="divShares" id="container"></div>
         <table>
           <tbody><tr>
-          <td class="align-left">FTSE 100</td>
-          <td class="align-right">5,583.50</td>
-          <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-          <td class="align-right positive">+168.00</td>
-          <td class="align-right positive">+3.10%</td>
+          <td class="tdbis">FTSE 100</td>
+          <td class="tdbis">5,583.50</td>
+          <td class="tdbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
+          <td class="tdbis">+168.00</td>
+          <td class="tdbis">+3.10%</td>
           </tr>
-          <tr class="table-alt">
-          <td class="align-left">FTSE 250</td>
-          <td class="align-right">14,807.14</td>
-          <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-          <td class="align-right positive">+707.93</td>
-          <td class="align-right positive">+5.02%</td>
+          <tr class="tdsecondbis">
+          <td class="tdsecondbis">FTSE 250</td>
+          <td class="tdsecondbis">14,807.14</td>
+          <td class="tdsecondbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
+          <td class="tdsecondbis">+707.93</td>
+          <td class="tdsecondbis">+5.02%</td>
           </tr>
           <tr>
-          <td class="align-left">FTSE 350</td>
-          <td class="align-right">3,099.04</td>
-          <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-          <td class="align-right positive">+102.07</td>
-          <td class="align-right positive">+3.41%</td>
+          <td class="tdbis">FTSE 350</td>
+          <td class="tdbis">3,099.04</td>
+          <td class="tdbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
+          <td class="tdbis">+102.07</td>
+          <td class="tdbis">+3.41%</td>
           </tr>
-          <tr class="table-alt">
-          <td class="align-left">FTSE All Share</td>
-          <td class="align-right">3,058.79</td>
-          <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-          <td class="align-right positive">+100.39</td>
-          <td class="align-right positive">+3.39%</td>
+          <tr class="tdsecondbis">
+          <td class="tdsecondbis">FTSE All Share</td>
+          <td class="tdsecondbis">3,058.79</td>
+          <td class="tdsecondbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
+          <td class="tdsecondbis">+100.39</td>
+          <td class="tdsecondbis">+3.39%</td>
           </tr>
-          <tr class="selected">
-          <td class="align-left">FTSE techMARK 100</td>
-          <td class="align-right">4,517.20</td>
-          <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-          <td class="align-right positive">+157.89</td>
-          <td class="align-right positive">+3.62%</td>
+          <tr class="tdbis">
+          <td class="tdbis">FTSE techMARK 100</td>
+          <td class="tdbis">4,517.20</td>
+          <td class="tdbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
+          <td class="tdbis">+157.89</td>
+          <td class="tdbis">+3.62%</td>
           </tr>
-          <tr class="table-alt">
-          <td class="align-left">FTSE Small Cap</td>
-          <td class="align-right">4,282.64</td>
-          <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-          <td class="align-right positive">+136.08</td>
-          <td class="align-right positive">+3.28%</td>
+          <tr class="tdsecondbis">
+          <td class="tdsecondbis">FTSE Small Cap</td>
+          <td class="tdsecondbis">4,282.64</td>
+          <td class="tdsecondbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
+          <td class="tdsecondbis">+136.08</td>
+          <td class="tdsecondbis">+3.28%</td>
           </tr>
           <tr class="">
-          <td class="align-left">FTSE AIM 100</td>
-          <td class="align-right">3,460.62</td>
-          <td class="change positive align-center"><i class="material-icons" style="color:green">arrow_upward</i></td>
-          <td class="align-right positive">+112.80</td>
-          <td class="align-right positive">+3.37%</td>
+          <td class="tdbis">FTSE AIM 100</td>
+          <td class="tdbis">3,460.62</td>
+          <td class="tdbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
+          <td class="tdbis">+112.80</td>
+          <td class="tdbis">+3.37%</td>
           </tr>
           </tbody></table>  
       </section>
@@ -145,7 +145,7 @@
         </script>
         
         <script>
-          Highcharts.getJSON('https://www.highcharts.com/samples/data/aapl-c.json', function (data) {
+          Highcharts.getJSON('./jsonfiles/ftse100.json', function (data) {
               // Create the chart
               Highcharts.stockChart('container', {   
         
