--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
           <ul>
             <li><a href="./index.html">Markets showroom</a></li>
             <li><a href="./shares.html">Shares</a></li>
-            <li><a href="#">Price Request Form</a></li>
           </ul>
         </nav>
         <nav class="botonesContenedor">
@@ -197,7 +196,7 @@
       <input placeholder="e.g Nigeria" id="search" type="text" class="validate" />
     </div>
   </div>
-  <div id="countryList"></div>
+  <div id="companyList"></div>
 
 </section>
 
