--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
 
   <script src="functionsCssChange.js"></script>
-  <script src="OtherFunctions.js"></script>
+  <script src="OtherFunctions2.js"></script>
 
     </body>
   </html>
