--- a/index.html
+++ b/index.html
@@ -48,49 +48,49 @@
   <section>
     <table>
       <tbody><tr>
-      <td class="tdbis"><a href="#" onclick="myJsFunc('ftse100.json');">FTSE 100</a></td>
+      <td class="tdbis"><a href="#" onclick="myJsFunc('ftse100');">FTSE 100</a></td>
       <td class="tdbis">5,583.50</td>
       <td class="tdbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
       <td class="tdbis">+168.00</td>
       <td class="tdbis">+3.10%</td>
       </tr>
       <tr class="tdsecondbis">
-      <td class="tdsecondbis"><a href="#" onclick="myJsFunc('ftse250.json');">FTSE 250</a></td>
+      <td class="tdsecondbis"><a href="#" onclick="myJsFunc('ftse250');">FTSE 250</a></td>
       <td class="tdsecondbis">14,807.14</td>
       <td class="tdsecondbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
       <td class="tdsecondbis">+707.93</td>
       <td class="tdsecondbis">+5.02%</td>
       </tr>
       <tr>
-      <td class="tdbis"><a href="#" onclick="myJsFunc('ftse350.json');">FTSE 350</a></td>
+      <td class="tdbis"><a href="#" onclick="myJsFunc('ftse350');">FTSE 350</a></td>
       <td class="tdbis">3,099.04</td>
       <td class="tdbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
       <td class="tdbis">+102.07</td>
       <td class="tdbis">+3.41%</td>
       </tr>
       <tr class="tdsecondbis">
-      <td class="tdsecondbis"><a href="#" onclick="myJsFunc('ftseAllShare.json');">FTSE All Share</a></td>
+      <td class="tdsecondbis"><a href="#" onclick="myJsFunc('ftseAllShare');">FTSE All Share</a></td>
       <td class="tdsecondbis">3,058.79</td>
       <td class="tdsecondbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
       <td class="tdsecondbis">+100.39</td>
       <td class="tdsecondbis">+3.39%</td>
       </tr>
       <tr class="tdbis">
-      <td class="tdbis"><a href="#" onclick="myJsFunc('ftseTechMARK100.json');">FTSE techMARK 100</a></td>
+      <td class="tdbis"><a href="#" onclick="myJsFunc('ftseTechMARK100');">FTSE techMARK 100</a></td>
       <td class="tdbis">4,517.20</td>
       <td class="tdbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
       <td class="tdbis">+157.89</td>
       <td class="tdbis">+3.62%</td>
       </tr>
       <tr class="tdsecondbis">
-      <td class="tdsecondbis"><a href="#" onclick="myJsFunc('ftseSmallCap.json');">FTSE Small Cap</a></td>
+      <td class="tdsecondbis"><a href="#" onclick="myJsFunc('ftseSmallCap');">FTSE Small Cap</a></td>
       <td class="tdsecondbis">4,282.64</td>
       <td class="tdsecondbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
       <td class="tdsecondbis">+136.08</td>
       <td class="tdsecondbis">+3.28%</td>
       </tr>
       <tr class="">
-      <td class="tdbis"><a href="#" onclick="myJsFunc('ftseAim100.json');">FTSE AIM 100</a></td>
+      <td class="tdbis"><a href="#" onclick="myJsFunc('ftseAim100');">FTSE AIM 100</a></td>
       <td class="tdbis">3,460.62</td>
       <td class="tdbis"><i class="material-icons" style="color:green">arrow_upward</i></td>
       <td class="tdbis">+112.80</td>
@@ -206,56 +206,7 @@
 
 
 
-  <script>
-  Highcharts.getJSON('./jsonfiles/ftse100.json', function (data) {
-      // Create the chart
-      Highcharts.stockChart('container', {   
-
-
-          rangeSelector: {
-              selected: 1
-          },
-          scrollbar: {
-              hide: true
-          },
-          series: [{
-              name: 'ftse100',
-              data: data,
-              tooltip: {
-                  valueDecimals: 2
-              }
-          }]
-      });
-  });
-
-  function myJsFunc(param1) {
-
-    Highcharts.getJSON('./jsonfiles/'+param1, function (data) {
-      // Create the chart
-      Highcharts.stockChart('container', {   
-
-
-          rangeSelector: {
-              selected: 1
-          },
-          scrollbar: {
-              hide: true
-          },
-          series: [{
-              name: param1,
-              data: data,
-              tooltip: {
-                  valueDecimals: 2
-              }
-          }]
-      });
-  });
-  }
-
-  </script>
-
-
-
+  <script src="chartfunctions.js"></script>
   <script src="functionsCssChange.js"></script>
   <script src="OtherFunctions2.js"></script>
 
