--- a/index.html
+++ b/index.html
@@ -190,14 +190,11 @@
 <section id="prueba">
   <div class="row container">
     <div class="input-field col s6">
-      <h5 class="center-align">
-        <i class="small material-icons">flag</i>Select A Country
-      </h5>
       <input placeholder="e.g Nigeria" id="search" type="text" class="validate" />
     </div>
   </div>
+  <section id="prueba">
   <div id="companyList"></div>
-
 </section>
 
 
