--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
   <h1>SHARES - PRICES & STOCK MARKETS</h1>
   <div class="h1side">
     <button><i class="material-icons">search</i></button>
-  <input type="search" id="site-search" name="q"
-  aria-label="Search through site content" placeholder="Enter stock name or EPIC">      
+  <input type="text" id="search" name="q"
+  aria-label="Search through site content" placeholder="Enter stock name or EPIC" class="validate">      
 </div>
+<div id="companyList"></div>
+
+
     </section>
     <section>
       <h2>Stock markets</h2>
@@ -187,15 +190,7 @@
     </section>
   </section>
   </section>
-<section id="prueba">
-  <div class="row container">
-    <div class="input-field col s6">
-      <input placeholder="e.g Nigeria" id="search" type="text" class="validate" />
-    </div>
-  </div>
-  <section id="prueba">
-  <div id="companyList"></div>
-</section>
+
 
 
 
