--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
   <h1>SHARES - PRICES & STOCK MARKETS</h1>
   <div class="h1side">
     <button><i class="material-icons">search</i></button>
+  <div class="buscadorYresultados">
   <input type="text" id="search" name="q"
-  aria-label="Search through site content" placeholder="Enter stock name or EPIC" class="validate">      
+  aria-label="Search through site content" placeholder="Enter stock name or EPIC">      
+  <div id="companyList"></div>
 </div>
-<div id="companyList"></div>
+</div>
 
 
     </section>
