--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
   <div class="h1side">
     <button><i class="material-icons">search</i></button>
   <div class="buscadorYresultados">
-  <input type="text" id="search" name="q"
-  aria-label="Search through site content" placeholder="Enter stock name or EPIC">      
+  <input type="text" id="search" name="q" placeholder="Enter stock name or EPIC">      
   <div id="companyList"></div>
 </div>
 </div>
