--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <div class="h1side">
     <button><i class="material-icons">search</i></button>
   <div class="buscadorYresultados">
-  <input type="text" id="search" name="q" placeholder="Enter stock name or EPIC">      
-  <div id="companyList"></div>
+  <input type="text" class="buscador" autocomplete="off" id="search" name="q" placeholder="Enter stock name or EPIC">      
+  <div class="companyList" id="companyList"></div>
 </div>
 </div>
 
