--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
       <h2>Stock markets</h2>
     </section>
     <section>
-      <h3 class="h3first">UK markets</h3>
-      <h3>World markets</h3>
+      <h3 class="h3first" id="tablaMercadosUK"><a href="#" onclick="myJsFuncCambiatabal('uk');">UK markets</a></h3>
+      <h3 id="tablaMercadosMundo"><a href="#" onclick="myJsFuncCambiatabal('world');">World markets</a></h3>
     </section>
 
   <section>
-    <table>
+    <table id="indices">
       <tbody><tr>
       <td class="tdbis"><a href="#" onclick="myJsFunc('ftse100');">FTSE 100</a></td>
       <td class="tdbis">5,583.50</td>
