ajustes css responsive

--- a/index.html
+++ b/index.html
@@ -110,14 +110,11 @@
   <section>
     <section class="sectionContenedora">
     <section class="sectionContenedora2">
-    <h3 class="h3first">FTSE100</h3>
-    <h3>FTSE250</h3>
-    <h3>AllShare</h3>
-    <h3>AIM100</h3>
-    <h3>SmallCap</h3>
-    <h3>Techmark</h3>
+    <h3 class="h3first"><a href="#" onclick="myJsFuncCambiatabal('FTSE100');">FTSE100</a></h3>
+    <h3><a href="#" onclick="myJsFuncCambiatabal('AIM100');">AIM100</a></h3>
+    <h3><a href="#" onclick="myJsFuncCambiatabal('SmallCap');">Small Cap</a></h3>
   </section>
-  <section class="sectionContenedora2">
+  <section class="sectionContenedora2" id="subidabajada">
     <div id="movers-risers" class="divtopflops">
       <p class="spacer-top-none spacer-bottom-half"><strong>FTSE 100 risers</strong></a></p>
       <table class="spacer-top-none">
