--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         </nav>
         <nav class="botonesContenedor">
           <ul class="botones">
-            <li><input id="colourBtn1" type="submit" value="Blue"/></li>
-            <li><input id="colourBtn2" type="submit" value="Green"/></li>
-            <li><input id="colourBtn3" type="submit" value="Yellow"/></li>
-          </ul>
+            <li><input class="botonAzul" id="colourBtn1" type="submit" value="Blue"/></li>
+            <li><input class="botonVerde" id="colourBtn2" type="submit" value="Green"/></li>
+            <li><input class="botonNaranja" id="colourBtn3" type="submit" value="Yellow"/></li>
+            </ul>
         </nav>
       </header>
   <main>
