--- a/shares.html
+++ b/shares.html
@@ -56,7 +56,28 @@
           </div>
       </section>  
       <section class="recuadroDentro2">
-        <input class="botonInvest" id="colourBtn1" type="submit" value="BUY"/>
+        <input class="botonInvest" id="investbutton" type="submit" value="INVEST"/>
+<div id="myModal" class="modal">
+    <div class="modal__header">
+    <span class="close">&times;</span>
+  </div>
+  <div class="modal-content"> 
+    <label><b>Email</b></label> 
+    <input class="inputForm" type="text" placeholder="Enter Email" name="email" required> 
+
+    <label><b>Password</b></label> 
+    <input class="inputForm" type="password" placeholder="Enter Password" name="psw" required> 
+
+    <label><b>Repeat Password</b></label> 
+    <input type="password" placeholder="Repeat Password" name="psw-repeat" required> 
+
+    <div class="clearfix"> 
+        <button type="submit" class="signupbtn">BUY</button> 
+        <button type="button" class="cancelbtn">SELL</button> 
+
+    </div> 
+</div>
+</div>
 
       </section>
     </section>
