ajustes finales css

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   <section class="sectionContenedora2" id="subidabajada">
     <div id="movers-risers" class="divtopflops">
       <p class="spacer-top-none spacer-bottom-half"><strong>FTSE 100 risers</strong></a></p>
-      <table class="spacer-top-none">
+      <table class="subidas">
         <tbody><tr>
           <td class="tdbis"><a href="./shares.html?share=Rolls Royce Holdings Plc" title="View factsheet for Rolls Royce Holdings Plc" class="link-headline">Rolls Royce Holdings Plc</a></td>
           <td class="tdbis">297.70p</td>
@@ -152,7 +152,7 @@
       </div>
     <div id="movers-fallers" class="divtopflops2">
       <p class="spacer-top-none spacer-bottom-half"><strong>FTSE 100 fallers</strong></a></p>
-      <table class="spacer-top-none spacer-bottom">
+      <table class="bajadas">
         <tbody><tr>
           <td class="tdbis"><a href="./shares.html?share=Sainsbury (J) plc" title="View factsheet for Sainsbury (J) plc" class="link-headline">Sainsbury (J) plc</a></td>
           <td class="tdbis">206.10p</td>
