ajustes graficos css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
       <title>Commercial Company Tool</title>
       <link id="estilos" href="./style1.css" rel="stylesheet" />
+      <link id="estilos" href="./styleHC.css" rel="stylesheet" />
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <script src="https://code.highcharts.com/stock/highstock.js"></script>
