--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </section>
 
   <section>
-    <table id="indices">
+    <table class="tableindices" id="indices">
       <tbody><tr>
       <td class="tdbis"><a href="#" onclick="myJsFunc('ftse100');">FTSE 100</a></td>
       <td class="tdbis">5,583.50</td>
