--- a/shares.html
+++ b/shares.html
@@ -115,7 +115,7 @@
           </div>
 
       </section>
-      <section>
+      <section class="contenedoraGrafica">
         <div class="divShares" id="container"></div>
         <table class="fundamentalsshare">
           <tbody><tr>
