--- a/sharesGreen.html
+++ b/sharesGreen.html
@@ -114,7 +114,7 @@
             <p class="separador3">EMS: 30,000</p>
         </div>
 
-    </section>
+    </section class="contenedoraGrafica">
     <section>
       <div class="divShares" id="container"></div>
       <table class="fundamentalsshare">
