--- a/shares.html
+++ b/shares.html
@@ -94,19 +94,19 @@
         </section>  
         
         <section class="recuadroBis">
-          <div class="recuadrocabecera">
+          <div class="recuadrocabecera3">
             <p class="separador3">Open: 57.44p</p>
             <p class="separador3">Trade high: 58.15p</p>
             <p class="separador3">Year high: 69.99p</p>
             <p class="separador3">Market capitalisation: £40.65 bn</p>
           </div>
-          <div class="recuadrocabecera">
+          <div class="recuadrocabecera3">
             <p class="separador3">Previous close: 57.44p</p>
             <p class="separador3">Trade low: 56.48p</p>
             <p class="separador3">Year low: 48.16p</p>
             <p class="separador3">P/E ratio: 10.44</p>
           </div>
-          <div class="recuadrocabecera">
+          <div class="recuadrocabecera3">
             <p class="separador3">Previous: 0.71p (1.25%)</p>
             <p class="separador3">Volume: 170,125,290</p>
             <p class="separador3">Dividend yield: 5.53%</p>
