--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <td class="tdbis">+3.37%</td>
       </tr>
       </tbody></table>
-      <div id="container"></div>
+      <div class="divShares2" id="container"></div>
   </section>
   <section>
     <h2>Risers and fallers</h2>
