mas ajustes css3

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </tbody></table>
       <div class="divShares2" id="container"></div>
   </section>
-  <section>
+  <section class="risersandfallers">
     <h2>Risers and fallers</h2>
   </section>
 
@@ -152,7 +152,7 @@
           </tbody></table>
       </div>
     <div id="movers-fallers" class="divtopflops2">
-      <p class="spacer-top-none spacer-bottom-half"><strong>FTSE 100 fallers</strong></a></p>
+      <p><strong>FTSE 100 fallers</strong></a></p>
       <table class="bajadas">
         <tbody><tr>
           <td class="tdbis"><a href="./shares.html?share=Sainsbury (J) plc" title="View factsheet for Sainsbury (J) plc" class="link-headline">Sainsbury (J) plc</a></td>
@@ -189,9 +189,6 @@
     </section>
   </section>
   </section>
-
-
-
   <section class="footer">
   </section>
   </main>
