mas ajustes css11

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section>
       <h2>Stock markets</h2>
     </section>
-    <section>
+    <section class="forMobile">
       <h3 class="h3first" id="tablaMercadosUK"><a href="#" onclick="myJsFuncCambiatabal('uk');">UK markets</a></h3>
       <h3 id="tablaMercadosMundo"><a href="#" onclick="myJsFuncCambiatabal('world');">World markets</a></h3>
     </section>
