mas ajustes buscador 2

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
     </section>
-    <section>
+    <section class="movil1">
       <h2>Stock markets</h2>
     </section>
     <section class="forMobile">
