resto de paginas de estilos

--- a/indexOrange.html
+++ b/indexOrange.html
@@ -17,7 +17,7 @@
       <p class="cabecera">Commercial <br> Company Tool</p>
       <nav>
         <ul>
-          <li><a href="./indexGreen.html">Markets showroom</a></li>
+          <li><a href="./indexOrange.html">Markets showroom</a></li>
           <li><a href="./sharesGreen.html">Shares</a></li>
         </ul>
       </nav>
