--- a/sharesOrange.html
+++ b/sharesOrange.html
@@ -18,8 +18,8 @@
         <p class="cabecera">Commercial <br> Company Tool</p>
         <nav>
           <ul>
-            <li><a href="./indexGreen.html">Markets showroom</a></li>
-            <li><a href="./sharesGreen.html">Shares</a></li>
+            <li><a href="./indexOrange.html">Markets showroom</a></li>
+            <li><a href="./sharesOrange.html">Shares</a></li>
           </ul>
         </nav>
         <nav class="botonesContenedor">
