--- a/indexGreen.html
+++ b/indexGreen.html
@@ -25,7 +25,7 @@
         <ul class="botones">
           <li><input class="botonAzul" id="colourBtn1" type="submit" value="Blue"/></li>
           <li><input class="botonVerde" id="colourBtn2" type="submit" value="Green"/></li>
-          <li><input class="botonNaranja" id="colourBtn3" type="submit" value="Yellow"/></li>
+          <li><input class="botonNaranja" id="colourBtn3" type="submit" value="Orange"/></li>
         </ul>
       </nav>
     </header>
